trunk/Archive2/46/d57f8f8cbdf814/output
main.cpp: In function 'int main()':
main.cpp:25:9: error: expected '}' before '{' token
         { 42, "zus" }, 
         ^
main.cpp:25:9: error: expected ',' or ';' before '{' token
main.cpp:25:22: error: expected primary-expression before ',' token
         { 42, "zus" }, 
                      ^
main.cpp:26:5: error: expected primary-expression before '}' token
     };
     ^
main.cpp:26:5: error: expected ';' before '}' token
main.cpp: At global scope:
main.cpp:26:6: warning: extra ';' [-Wpedantic]
     };
      ^
main.cpp:29:14: error: expected constructor, destructor, or type conversion before '(' token
     std::sort(vec.begin(), vec.end(), cmp);
              ^
main.cpp:31:35: error: 'vec' was not declared in this scope
     auto range = std::equal_range(vec.begin(), vec.end(), std::string("zus"), cmp);
                                   ^
main.cpp:31:48: error: 'vec' was not declared in this scope
     auto range = std::equal_range(vec.begin(), vec.end(), std::string("zus"), cmp);
                                                ^
main.cpp:33:5: error: expected unqualified-id before 'for'
     for(auto it = range.first; it!= range.second; ++it)
     ^
main.cpp:33:32: error: 'it' does not name a type
     for(auto it = range.first; it!= range.second; ++it)
                                ^
main.cpp:33:51: error: expected unqualified-id before '++' token
     for(auto it = range.first; it!= range.second; ++it)
                                                   ^
main.cpp:35:1: error: expected declaration before '}' token
 }
 ^
